--- a/TinyRadius/build.xml
+++ b/TinyRadius/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-$Id: build.xml,v 1.1 2005/04/17 14:51:27 wuttke Exp $   
+$Id: build.xml,v 1.2 2005/04/19 18:55:30 wuttke Exp $   
 created 11.04.2005 18:05:36                                                        
 TinyRadius build file
 -->
@@ -9,7 +9,8 @@ TinyRadius build file
 	<property name="src" location="src"/>
 	<property name="build" location="build"/>
 	<property name="dist" location="dist"/>
-	<property name="version" value="0.9"/>
+	<property name="version" value="0.9.1"/>
+	<property name="classpath" value="lib/commons-logging.jar"/>
 	
 	<target name="init">
 		<tstamp/>
@@ -17,7 +18,7 @@ TinyRadius build file
 	</target>
 	
 	<target name="compile" depends="init">
-        <javac srcdir="${src}" destdir="${build}"/>
+        <javac srcdir="${src}" destdir="${build}" classpath="${classpath}"/>
     </target>
 
     <target name="jar" depends="compile">
