--- a/TinyRadius/build.xml
+++ b/TinyRadius/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-$Id: build.xml,v 1.2 2005/04/19 18:55:30 wuttke Exp $   
+$Id: build.xml,v 1.3 2005/05/03 15:30:48 wuttke Exp $   
 created 11.04.2005 18:05:36                                                        
 TinyRadius build file
 -->
@@ -9,7 +9,7 @@ TinyRadius build file
 	<property name="src" location="src"/>
 	<property name="build" location="build"/>
 	<property name="dist" location="dist"/>
-	<property name="version" value="0.9.1"/>
+	<property name="version" value="0.9.2"/>
 	<property name="classpath" value="lib/commons-logging.jar"/>
 	
 	<target name="init">
@@ -31,19 +31,19 @@ TinyRadius build file
 		<delete dir="${build}"/>
 	</target>
 	
-	<target name="javadoc">
+	<target name="javadoc" depends="compile">
 		<javadoc destdir="doc/apidoc"
 			access="protected" 
 			use="true" notree="false" nonavbar="false" noindex="false"
 			splitindex="true" author="true" version="true"
 			nodeprecatedlist="false" nodeprecated="false"
 			packagenames="org.tinyradius.packet,org.tinyradius.util,org.tinyradius.test,org.tinyradius.attribute"
-			sourcepath="${src}" classpath="bin"
+			sourcepath="${src}" classpath="${build}:${classpath}"
 			doctitle="TinyRadius: Java Radius Library"
 			additionalparam=" -encoding iso-8859-1 -docencoding iso-8859-1 -charset iso-8859-1"/>
 	</target>
 	
-	<target name="dist" depends="jar">
+	<target name="dist" depends="jar,javadoc">
 		<delete file="${dist}/TinyRadius-${version}.tar.gz"/>
 		<tar tarfile="${dist}/TinyRadius-${version}.tar">
 			<tarfileset dir=".">
