*** empty log message ***

--- a/TinyRadius/build.xml
+++ b/TinyRadius/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-$Id: build.xml,v 1.6 2005/09/04 22:11:04 wuttke Exp $   
+$Id: build.xml,v 1.7 2005/09/06 18:06:32 wuttke Exp $   
 created 11.04.2005 18:05:36                                                        
 TinyRadius build file
 -->
@@ -55,6 +55,31 @@ TinyRadius build file
 		</tar>
 		<gzip zipfile="${dist}/TinyRadius-${version}.tar.gz" src="${dist}/TinyRadius-${version}.tar"/>
 		<delete file="${dist}/TinyRadius-${version}.tar"/>
+	</target>
+	
+	<target name="sourceforge" depends="dist">
+	    <ftp server="upload.sourceforge.net"
+	         remotedir="incoming"
+	         userid="anonymous"
+	         password=""
+	         verbose="yes"
+	         passive="yes">
+	    	<fileset file="${dist}/TinyRadius-${version}.tar.gz"/>
+	    </ftp>
+	</target>
+	
+	<!-- requires the passphrase of the SSH private key
+	to be cached in the SSH agent -->
+	<target name="website" depends="javadoc">
+		<exec executable="scp">
+			<arg line="-r"/>
+			<arg line="doc/apidoc"/>
+			<arg line="wuttke@tinyradius.sf.net:/home/groups/t/ti/tinyradius/htdocs"/>
+		</exec>
+		<exec executable="scp">
+			<arg line="doc/tinyradius.html"/>
+			<arg line="wuttke@tinyradius.sf.net:/home/groups/t/ti/tinyradius/htdocs/index.html"/>
+		</exec>
 	</target>
 
 </project>
