--- a/TinyRadius/build.xml
+++ b/TinyRadius/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-$Id: build.xml,v 1.15 2007/03/09 18:22:32 wuttke Exp $   
+$Id: build.xml,v 1.16 2007/03/27 14:33:36 wuttke Exp $   
 created 11.04.2005 18:05:36                                                        
 TinyRadius build file
 -->
@@ -18,7 +18,12 @@ TinyRadius build file
 	</target>
 	
 	<target name="compile" depends="init">
-        <javac srcdir="${src}" destdir="${build}" classpath="${classpath}" debug="true"/>
+        <javac srcdir="${src}" 
+               destdir="${build}" 
+               classpath="${classpath}" 
+               debug="true" 
+               source="1.2"
+               target="1.1"/>
     </target>
 
     <target name="jar" depends="compile">
