--- a/rapid-radius-lib/pom.xml
+++ b/rapid-radius-lib/pom.xml
@@ -32,11 +32,34 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>JASIG</id>
+			<name>JASIG</name>
+			<url>http://developer.jasig.org/repo/content/groups/m2-legacy/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.entersectmobile</groupId>
+			<artifactId>utilj2me</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.gnu</groupId>
+			<artifactId>gnu-crypto</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
